@@ -19,6 +19,7 @@
 package org.apache.cassandra.db.rows;
 
 import static org.apache.cassandra.SchemaLoader.standardCFMD;
+import static org.apache.cassandra.db.ColumnFamilyStore.FlushReason.UNIT_TESTS;
 import static org.junit.Assert.*;
 
 import java.util.ArrayList;
@@ -31,6 +32,7 @@ import java.util.SortedMap;
 import java.util.TreeMap;
 
 import com.google.common.collect.Iterators;
+import org.junit.BeforeClass;
 import org.junit.Test;
 
 import org.apache.cassandra.SchemaLoader;
@@ -51,10 +53,11 @@ import org.apache.cassandra.db.RowUpdateBuilder;
 import org.apache.cassandra.db.marshal.Int32Type;
 import org.apache.cassandra.db.marshal.UTF8Type;
 import org.apache.cassandra.db.partitions.AbstractUnfilteredPartitionIterator;
-import org.apache.cassandra.db.partitions.ImmutableBTreePartition;
+import org.apache.cassandra.db.partitions.TrieBackedPartition;
 import org.apache.cassandra.db.partitions.Partition;
 import org.apache.cassandra.db.partitions.UnfilteredPartitionIterator;
 import org.apache.cassandra.dht.Murmur3Partitioner;
+import org.apache.cassandra.exceptions.ConfigurationException;
 import org.apache.cassandra.io.sstable.ISSTableScanner;
 import org.apache.cassandra.io.sstable.format.SSTableReader;
 import org.apache.cassandra.schema.ColumnMetadata;
@@ -68,6 +71,15 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
 {
     private static final String KSNAME = "ThrottledUnfilteredIteratorTest";
     private static final String CFNAME = "StandardInteger1";
+
+    @BeforeClass
+    public static void defineSchema() throws ConfigurationException
+    {
+        SchemaLoader.prepareServer();
+        SchemaLoader.createKeyspace(KSNAME,
+                                    KeyspaceParams.simple(1),
+                                    standardCFMD(KSNAME, CFNAME, 1, UTF8Type.instance, Int32Type.instance, Int32Type.instance));
+    }
 
     static final TableMetadata metadata;
     static final ColumnMetadata v1Metadata;
@@ -99,7 +111,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
 
         // flush and generate 1 sstable
         ColumnFamilyStore cfs = Keyspace.open(keyspace()).getColumnFamilyStore(currentTable());
-        Util.flush(cfs);
+        cfs.forceBlockingFlush(UNIT_TESTS);
         cfs.disableAutoCompaction();
         cfs.forceMajorCompaction();
 
@@ -134,7 +146,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
 
         // flush and generate 1 sstable
         ColumnFamilyStore cfs = Keyspace.open(keyspace()).getColumnFamilyStore(currentTable());
-        Util.flush(cfs);
+        cfs.forceBlockingFlush(UNIT_TESTS);
         cfs.disableAutoCompaction();
         cfs.forceMajorCompaction();
 
@@ -148,7 +160,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
             UnfilteredRowIterator iterator = throttled.next();
             assertFalse(throttled.hasNext());
             assertFalse(iterator.hasNext());
-            assertEquals(Int32Type.instance.getSerializer().deserialize(iterator.staticRow().cells().iterator().next().buffer()), Integer.valueOf(160));
+            assertEquals(Int32Type.instance.getSerializer().deserialize(iterator.staticRow().cells().iterator().next().buffer()), new Integer(160));
         }
 
         // test opt out
@@ -192,7 +204,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
 
         // flush and generate 1 sstable
         ColumnFamilyStore cfs = Keyspace.open(keyspace()).getColumnFamilyStore(currentTable());
-        Util.flush(cfs);
+        cfs.forceBlockingFlush(UNIT_TESTS);
         cfs.disableAutoCompaction();
         cfs.forceMajorCompaction();
 
@@ -355,7 +367,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
         {
             origin = rows(metadata.regularAndStaticColumns(),
                           1,
-                          DeletionTime.build(0, 100),
+                          new DeletionTime(0, 100),
                           createStaticRow(createCell(staticMetadata, 160)),
                           rows.toArray(new Row[0]));
             throttledIterator = new ThrottledUnfilteredIterator(origin, throttle);
@@ -402,7 +414,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
         for (int throttle = 2; throttle < 1200; throttle += 21)
         {
             origin = partitions(metadata.regularAndStaticColumns(),
-                                DeletionTime.build(0, 100),
+                                new DeletionTime(0, 100),
                                 createStaticRow(createCell(staticMetadata, 160)),
                                 partitions);
             throttledIterator = ThrottledUnfilteredIterator.throttle(origin, throttle);
@@ -423,7 +435,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
                 }
                 UnfilteredRowIterator current = rows(metadata.regularAndStaticColumns(),
                                                      currentPartition,
-                                                     DeletionTime.build(0, 100),
+                                                     new DeletionTime(0, 100),
                                                      createStaticRow(createCell(staticMetadata, 160)),
                                                      partitions.get(currentPartition).toArray(new Row[0]));
                 assertMetadata(current, splitted, currentSplit == 1);
@@ -439,7 +451,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
 
 
         origin = partitions(metadata.regularAndStaticColumns(),
-                            DeletionTime.build(0, 100),
+                            new DeletionTime(0, 100),
                             Rows.EMPTY_STATIC_ROW,
                             partitions);
         try
@@ -582,7 +594,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
         return createCell(metadata, v, 100L, BufferCell.NO_DELETION_TIME);
     }
 
-    private static Cell<?> createCell(ColumnMetadata metadata, int v, long timestamp, long localDeletionTime)
+    private static Cell<?> createCell(ColumnMetadata metadata, int v, long timestamp, int localDeletionTime)
     {
         return new BufferCell(metadata,
                               timestamp,
@@ -595,9 +607,6 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
     @Test
     public void testThrottledIteratorWithRangeDeletions() throws Exception
     {
-        SchemaLoader.createKeyspace(KSNAME,
-                                    KeyspaceParams.simple(1),
-                                    standardCFMD(KSNAME, CFNAME, 1, UTF8Type.instance, Int32Type.instance, Int32Type.instance));
         Keyspace keyspace = Keyspace.open(KSNAME);
         ColumnFamilyStore cfs = keyspace.getColumnFamilyStore(CFNAME);
 
@@ -613,7 +622,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
 
         new RowUpdateBuilder(cfs.metadata(), 1, key).addRangeTombstone(10, 22).build().applyUnsafe();
 
-        Util.flush(cfs);
+        cfs.forceBlockingFlush(UNIT_TESTS);
 
         builder = UpdateBuilder.create(cfs.metadata(), key).withTimestamp(2);
         for (int i = 1; i < 40; i += 2)
@@ -643,7 +652,7 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
                 while (throttled.hasNext())
                 {
                     UnfilteredRowIterator next = throttled.next();
-                    ImmutableBTreePartition materializedPartition = ImmutableBTreePartition.create(next);
+                    TrieBackedPartition materializedPartition = TrieBackedPartition.fromIterator(next);
                     int unfilteredCount = Iterators.size(materializedPartition.unfilteredIterator());
 
                     System.out.println("batchsize " + batchSize + " unfilteredCount " + unfilteredCount + " materializedPartition " + materializedPartition);
@@ -672,9 +681,9 @@ public class ThrottledUnfilteredIteratorTest extends CQLTester
             }
 
             // Verify throttled data after merge
-            Partition partition = ImmutableBTreePartition.create(UnfilteredRowIterators.merge(unfilteredRowIterators));
+            Partition partition = TrieBackedPartition.fromIterator(UnfilteredRowIterators.merge(unfilteredRowIterators));
 
-            long nowInSec = FBUtilities.nowInSeconds();
+            int nowInSec = FBUtilities.nowInSeconds();
 
             for (int i : live)
                 assertTrue("Row " + i + " should be live", partition.getRow(Clustering.make(ByteBufferUtil.bytes((i)))).hasLiveData(nowInSec, cfs.metadata().enforceStrictLiveness()));
